# Zombrr

./: .gitattributes  .gitignore  Cargo.toml  Readme.md
.cargo/: config.toml
binaries/sandbox/: Cargo.toml
binaries/sandbox/src/: change_map.rs  change_mode.rs  events.rs  main.rs  skip_menu.rs
crates/bevy_sky/: Cargo.toml
crates/bevy_sky/examples/: cycle.rs  sky_shader.rs
crates/bevy_sky/src/: lib.rs  material.rs  plugin.rs
crates/bevy_sky/src/entities/: mod.rs  sky.rs  sun.rs
crates/bevy_sky/src/shaders/: sky.frag
crates/bevy_sky/src/systems/: camera.rs  mod.rs  setup.rs  time.rs
source/arena/: Cargo.toml
source/arena/src/: interface.rs  lib.rs  plugin.rs  utils.rs
source/arena/src/controllers/: mod.rs
source/arena/src/controllers/character/: bundle.rs  finalize.rs  mod.rs  spawn.rs
source/arena/src/controllers/damage/: apply.rs  components.rs  death.rs  events.rs  plugin.rs
source/arena/src/controllers/navigatable/: collision.rs  input.rs  mod.rs  navigatable.rs  system.rs
source/arena/src/controllers/tracers/: animate.rs  bundle.rs  mod.rs  setup.rs  shaders.rs  trace.rs
source/arena/src/controllers/weapon/: bundle.rs  finalize.rs  fire.rs  magazine.rs  mod.rs  plugin.rs  spawn.rs
source/arena/src/controllers/weapon/fire/: mod.rs  ray.rs
source/arena/src/display/: init.rs  mod.rs  plugin.rs
source/arena/src/enemy/: bundle.rs  mod.rs  plugin.rs  spawn.rs
source/arena/src/enemy/brain/: bline.rs  mod.rs
source/arena/src/map/: cleanup.rs  entities.rs  init.rs  mod.rs  plugin.rs  spawn.rs
source/arena/src/modes/: mod.rs  one.rs  plugin.rs
source/arena/src/player/: bundle.rs  cameras.rs  cleanup.rs  init.rs  mod.rs  plugin.rs
source/arena/src/systems/: mod.rs  setup.rs  tear_down.rs
source/core/: Cargo.toml
source/core/src/: lib.rs  object.rs  options.rs  state.rs
source/damage/: Cargo.toml
source/damage/src/: apply.rs  bullet_holes.rs  death.rs  lib.rs  plugin.rs
source/gltf/: Cargo.toml
source/gltf/src/: extras.rs  lib.rs  loader.rs
source/health/: Cargo.toml
source/health/src/: apply.rs  damage.rs  death.rs  health.rs  lib.rs  plugin.rs
source/map/: Cargo.toml
source/map/src/: active_map.rs  cleanup.rs  init.rs  lib.rs  plugin.rs  resources.rs  spawn.rs
source/map/src/gltf/: extras.rs  loader.rs  mod.rs
source/map/src/systems/: cleanup.rs  init.rs  mod.rs  spawn.rs
source/zombrr/: Cargo.toml
source/zombrr/src/: lib.rs  plugin.rs
source/zombrr/src/arena/: interface.rs  mod.rs  plugin.rs  resources.rs
source/zombrr/src/arena/bundles/: character.rs  mod.rs  weapon.rs
source/zombrr/src/arena/controllers/: mod.rs
source/zombrr/src/arena/controllers/character/: mod.rs  plugin.rs
source/zombrr/src/arena/controllers/damage/: components.rs  death.rs  events.rs  mod.rs  plugin.rs
source/zombrr/src/arena/controllers/navigatable/: input.rs  mod.rs  navigatable.rs
source/zombrr/src/arena/controllers/tracers/: bundle.rs  plugin.rs  trace.rs
source/zombrr/src/arena/controllers/weapon/: bundle.rs  finalize.rs  fire.rs  input.rs  mod.rs  plugin.rs  spawn.rs
source/zombrr/src/arena/display/: init.rs  mod.rs  plugin.rs
source/zombrr/src/arena/enemy/: bundle.rs  mod.rs  plugin.rs  spawn.rs
source/zombrr/src/arena/enemy/brain/: bline.rs
source/zombrr/src/arena/map/: init.rs  spawn.rs
source/zombrr/src/arena/modes/: one.rs
source/zombrr/src/arena/player/: bundle.rs  init.rs  mod.rs
source/zombrr/src/arena/systems/: mod.rs  tear_down.rs
source/zombrr/src/devtools/: change_map.rs  enemy.rs  mod.rs  panel.rs  physics.rs  plugin.rs  toggle.rs  weapons.rs
source/zombrr/src/systems/: mod.rs  packages.rs
