[package]
name = "zombrr-sandbox"
version = "0.1.0"
edition = "2021"

[dependencies]
zombrr = { path = "../../source/zombrr" }
zombrr-core = { path = "../../source/core" }
#bevy_hilt = { path = "../../crates/bevy_hilt" }
# Temp
#bevy_flycam = "0.5.1"
#bevy_sky = { path = "../../crates/bevy_sky" }

[dependencies.bevy]
version = "0.5.0"
default-features = false
features = [
    "bevy_audio",
    "bevy_dynamic_plugin",
    "bevy_gilrs",
    "bevy_wgpu",
    "bevy_winit",
    "render",
    "png",
    "hdr",
    "mp3",
    "x11",
]
