[package]
name = "zombrr-sandbox"
version = "0.1.0"
edition = "2021"

[dependencies]
zombrr = { path = "../../source/zombrr" }
zombrr-core = { path = "../../source/core" }
zombrr_arena = { path = "../../source/arena" }
bevy_devtools = { git = "https://github.com/Bytebuddha/bevy_devtools" }

[dependencies.bevy]
version = "0.5.0"
default-features = false
features = [
    "bevy_audio",
    "bevy_dynamic_plugin",
    "bevy_gilrs",
    "bevy_wgpu",
    "bevy_winit",
    "render",
    "png",
    "hdr",
    "mp3",
    "x11",
]
