[package]
name = "bevy_sky"
version = "0.1.0"
authors = ["Patrick Greene <patrickisgreene@protonmail.com>"]
edition = "2021"
license = "MIT"

[dependencies]
chrono = "0.4.19"
bevy = { version = "0.5", default-features = false }
spa = { git = "https://github.com/frehberg/spa-rs", rev = "9b0216a6970fdc9b459cc43b76e7b6867a089f9c" }

[dev-dependencies]
bevy = "0.5.0"
bevy_devtools = { git = "https://github.com/Bytebuddha/bevy_devtools" }
